--- a/productos.html
+++ b/productos.html
@@ -10,7 +10,7 @@
 <body>
         <header>
             <div class="logo">
-                <a href="/index.html"><img src="img/logo.svg" alt="Logo" height="75px"><img src="img/Hermanos_Jota.png" alt="Hermanos Jota" height="60px"></a>
+                <a href="index.html"><img src="img/logo.svg" alt="Logo" height="75px"><img src="img/Hermanos_Jota.png" alt="Hermanos Jota" height="60px"></a>
             </div>
 
             <form class="buscador">
